<resources>
    <string name="app_name">mykloud list</string>
    <string name="add">Add</string>
    <string name="remove">remove</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="cancel">Cancel</string>
    <string name="edit">edit</string>
    <string name="edit_task">Edit Task</string>
</resources>