<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvEditTask"
        style="@style/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/edit_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTitleEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditTask" />

    <TextView
        android:id="@+id/tvPriorityEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/priority"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitleEdit" />

    <TextView
        android:id="@+id/boxHighEdit"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/red_radius_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriorityEdit" />

    <TextView
        android:id="@+id/boxMediumEdit"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/blue_radius_bg"
        app:layout_constraintStart_toEndOf="@+id/boxHighEdit"
        app:layout_constraintTop_toBottomOf="@+id/tvPriorityEdit" />

    <TextView
        android:id="@+id/boxLowEdit"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/green_radius_bg"
        app:layout_constraintStart_toEndOf="@+id/boxMediumEdit"
        app:layout_constraintTop_toBottomOf="@+id/tvPriorityEdit" />

    <TextView
        android:id="@+id/tvCancelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="238dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitleEdit"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/edit"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitleEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>